[tool.poetry]
name = "blockchain-bank"
version = "0.1.0"
description = "A blockchain console python bank connected to a Redis database."
authors = ["WAIO Tech <waiotech.com@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
clear-screen = "^0.1.14"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
